plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

sourceCompatibility = '21'

dependencies {
    implementation 'com.google.guava:guava:33.0-jre'
    implementation 'com.amazonaws:aws-java-sdk-cognitoidp:1.12.471'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'org.slf4j:slf4j-simple:2.0.7'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

mainClassName = 'blog.elmland.amazon.cognito.App'
